<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/launch_mode_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/launch_mode_back" />

        <Button
            android:id="@+id/launch_mode_alert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/launch_mode_alert" />

        <Button
            android:id="@+id/launch_mode_pop1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/launch_mode_pop1"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/launch_mode_pop2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/launch_mode_pop2"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/launch_mode_pop3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/launch_mode_pop3"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/launch_mode_pop4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/launch_mode_pop4"
            tools:ignore="UsingOnClickInXml" />
    </LinearLayout>
</ScrollView>